--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "react ",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "parcel build index.html",
+    "start": "parcel index.html"
   },
   "repository": {
     "type": "git",
